# pd-ceammc

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  INSTALL.md  PureData_ceammc.files  PureData_ceammc.includes  README.md  README_CEAMMC.md  README_ORIGINAL.md  appveyor.yml  config.h.in  configure.ac
ceammc/: .gitignore  CHANGELOG.md  CMakeLists.txt  ceammc_config.h.in  ceammc_template.pot  cppcheck_suppressions.txt  dev_info_Darwin.txt  dev_info_Linux.txt  dev_info_Windows.txt  external_version.cmake  license_template.txt  macosx_mingw_crosscompile.md
ceammc/distrib/: CMakeLists.txt  bashrc_tests  build_macosx_gcc_coverage.sh  ceammc_pddoc_link_fix.py  check_all_pddoc_refs.sh  check_doc_external.py  deken_expect_login  deken_make_package.sh  deken_upload_package.sh  deken_upload_package_expect.sh  dev_sync_pd.sh  dev_sync_tcl.sh  doc_check_methods.sh  fill_doc_defaults.py  fill_doc_properties.py  gen_doc_template.py  list_all_doc_externals.sh  make_lib_compat_mac.sh  make_lib_mac.sh  make_release_patch.py  release_0.9.2.pd  release_0.9.3.pd  release_0.9.4.pd  release_0.9.5.pd  release_0.9.7.pd  release_0.9.7_en.lua  release_0.9.7_en.pd  release_0.9.7_ru.lua  release_0.9.7_ru.pd  release_qlist_0.9.2.txt  release_qlist_0.9.4.txt  release_text_0.9.2.txt  release_text_0.9.4.txt  release_text_0.9.5.txt  template.release.pd  template_release.pd  template_release_0.9.4.pd  template_release_0.9.5.pd  update_cpp_src_from_doc.sh  update_pddoc.py
ceammc/distrib/appveyor/: install.bat
ceammc/distrib/bintray/: CMakeLists.txt  upload_bintray.sh
ceammc/distrib/docker/: CMakeLists.txt  debian_9.4.sh  ubuntu_16.04.sh  ubuntu_17.10.sh  ubuntu_18.04.sh  ubuntu_18.10.sh  ubuntu_19.04.sh
ceammc/distrib/fonts/: CMakeLists.txt
ceammc/distrib/linux/: CMakeLists.txt  build_faust.sh  build_verovio.sh  make_lib_linux.sh  snapcraft.yaml.in
ceammc/distrib/mac/: CMakeLists.txt  build_all.sh  build_deps.sh  build_faust.sh  build_fftw.sh  build_flac.sh  build_ogg.sh  build_opus.sh  build_pd.sh  build_portaudio.sh  build_sndfile.sh  build_speex.sh  build_verovio.sh  build_vorbis.sh  check_bundle.sh  check_library.sh  diff_bundle.py  gen_examples.sh  github_upload_release.sh  install_deps.sh  install_external.sh  make_bundle.sh  make_lib_extended_mac.sh  make_lib_mac.sh  ps_to_png.sh  save_example.sh  save_postscript.sh  shellrc
ceammc/distrib/tcl/: CMakeLists.txt
ceammc/distrib/win/: CMakeLists.txt  Toolchain-mingw32.cmake  build_all.sh  build_faust.sh  build_verovio.sh  calc_checksums.sh  crosscompile_config_sample.sh  fix_dll_deps.py  fix_dll_deps.sh  install_deps.sh  install_external.sh  install_mingw64_deps.sh  make_lib_win.sh  pd.iss  remove_external.sh  win_fix_pddoc_key_modifiers.sh  win_upload_to_github.sh
ceammc/doxygen/: Doxyfile  pd_ceammc_lib.tiff
ceammc/ext/: CMakeLists.txt  EXTENSION_HOWTO.md  ceammc_objects.txt  conf.py  core_objects.txt  extra_objects.txt  index.md
ceammc/ext/abstractions/: CMakeLists.txt  abstractions.txt  faust2ui.sh  gdyn.comp2~.pd  gdyn.comp_peak2~.pd  gdyn.comp_peak_ff~.pd  gdyn.comp_peak~.pd  gdyn.comp_up2~.pd  gdyn.comp_up~.pd  gdyn.comp~.pd  gdyn.expand2~.pd  gdyn.expand~.pd  gdyn.gate2~.pd  gdyn.gate~.pd  gflt.bpf12~.pd  gflt.bpf24~.pd  gflt.eq10~.pd  gflt.eq_peak_cq~.pd  gflt.eq_peak~.pd  gflt.fb_comb~.pd  gflt.fbank5x1~.pd  gflt.ff_comb~.pd  gflt.highshelf~.pd  gflt.hpf12~.pd  gflt.hpf24~.pd  gflt.lowshelf~.pd  gflt.lpf12~.pd  gflt.lpf24~.pd  gflt.moog_vcf~.pd  gflt.notch~.pd  gflt.resonbp~.pd  gflt.resonhp~.pd  gflt.resonlp~.pd  gflt.speaker~.pd  (+91 more)
ceammc/extra/: CMakeLists.txt  autotune_objects.txt  extra_objects.txt  fftease_objects.txt  libdir_objects.txt  library_pddoc.cmake
ceammc/faust/: CMakeLists.txt  an_rms.dsp  ceammc.lib  ceammc_dsp_ext.cpp  ceammc_instruments.lib  ceammc_osc.lib  ceammc_ui.lib  dyn_comp.dsp  dyn_comp.dsp.json  dyn_comp2.dsp  dyn_comp2.dsp.json  dyn_comp_peak.dsp  dyn_comp_peak.dsp.json  dyn_comp_peak2.dsp  dyn_comp_peak2.dsp.json  dyn_comp_peak_ff.dsp  dyn_comp_peak_ff.dsp.json  dyn_comp_up.dsp  dyn_comp_up.dsp.json  dyn_comp_up2.dsp  dyn_comp_up2.dsp.json  dyn_expand.dsp  dyn_expand.dsp.json  dyn_expand2.dsp  dyn_expand2.dsp.json  dyn_gate.dsp  dyn_gate.dsp.json  dyn_gate2.dsp  dyn_gate2.dsp.json  dyn_limit.dsp  dyn_limit2.dsp  dyn_softclip.dsp  env_adsr.dsp  env_ar.dsp  env_asr.dsp  env_asr2.dsp  env_follow.dsp  env_smooth.dsp  eq_highshelf.dsp  eq_lowshelf.dsp  (+262 more)
ceammc/gui/: CMakeLists.txt  Info.plist  pd_ceammc.icns
ceammc/py/: CMakeLists.txt  extension_generator.py  generate_math.py  generate_math_doc.py  update_object_info.py  wav2text.py
ceammc/scripts/: CMakeLists.txt  filecontent_to_cxx_header.sh  list_faust_targets.cmake  travis_before_install.sh  travis_configure.sh  travis_coveralls.sh  travis_package.sh  vanilla_diff_src_files.sh
ceammc/utils/: CMakeLists.txt  tcl2cxx.cpp  tcl2cxx.l
extra/: CMakeLists.txt
extra/bob~/: CMakeLists.txt
extra/bonk~/: CMakeLists.txt  bonk~.c
extra/choice/: CMakeLists.txt
extra/fiddle~/: CMakeLists.txt  fiddle~.c
extra/loop~/: CMakeLists.txt
extra/lrshift~/: CMakeLists.txt
extra/pd~/: CMakeLists.txt  pdsched.c  pd~.c
extra/pique/: CMakeLists.txt
extra/sigmund~/: CMakeLists.txt  sigmund~.c
extra/stdout/: CMakeLists.txt
po/: CMakeLists.txt  af.po  be.po  bg.po  clean_po_files.sh  de.po  el.po  en_ca.po  es.po  eu.po  fr.po  gu.po  he.po  hi.po  hu.po  it.po  pa.po  pt_br.po  pt_pt.po  ru.po  sq.po  sv.po  template.pot  vi.po
portmidi/pm_common/: CMakeLists.txt
src/: CMakeLists.txt  d_fft_fftsg.c  d_fft_fftw.c  d_math.c  d_ugen.c  g_all_guis.c  g_all_guis.h  g_bang.c  g_canvas.c  g_canvas.h  g_ceammc_draw.c  g_ceammc_draw.h  g_draw.c  g_editor.c  g_editor_extras.c  g_graph.c  g_hdial.c  g_hslider.c  g_mycanvas.c  g_numbox.c  g_readwrite.c  g_rtext.c  g_style.c  g_style.h  g_template.c  g_text.c  g_toggle.c  g_vdial.c  g_vslider.c  g_vumeter.c  m_binbuf.c  m_class.c  m_conf.c  m_glob.c  m_imp.h  m_pd.c  m_pd.h  pd.rc  s_audio_dummy.c  s_audio_mmio.c  (+15 more)
(+9328 files in other folders)
